--- a/src/App.css
+++ b/src/App.css
@@ -724,6 +724,7 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em adriane, serif;
+   
    color: #fff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
@@ -731,7 +732,7 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: whitesmoke;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
