--- a/src/App.css
+++ b/src/App.css
@@ -1485,7 +1485,7 @@ footer .copyright  li:first-child:before {
 /* social links */
 footer .social-links {
    margin: 18px 0 30px 0;
-   padding: 0;
+   padding: 20px;
    font-size: 30px;
 }
 footer .social-links li {
